@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.springframework.boot.actuate.autoconfigure.endpoint.web.documentatio
 
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -94,7 +93,7 @@ class MappingsEndpointServletDocumentationTests extends AbstractEndpointDocument
 					.optional()
 					.type(JsonFieldType.OBJECT),
 				parentIdField());
-		List<FieldDescriptor> dispatcherServletFields = new ArrayList<>(Arrays.asList(
+		List<FieldDescriptor> dispatcherServletFields = new ArrayList<>(List.of(
 				fieldWithPath("*")
 					.description("Dispatcher servlet mappings, if any, keyed by dispatcher servlet bean name."),
 				fieldWithPath("*.[].details").optional()
@@ -102,7 +101,7 @@ class MappingsEndpointServletDocumentationTests extends AbstractEndpointDocument
 					.description("Additional implementation-specific details about the mapping. Optional."),
 				fieldWithPath("*.[].handler").description("Handler for the mapping."),
 				fieldWithPath("*.[].predicate").description("Predicate for the mapping.")));
-		List<FieldDescriptor> requestMappingConditions = Arrays.asList(
+		List<FieldDescriptor> requestMappingConditions = List.of(
 				requestMappingConditionField("").description("Details of the request mapping conditions.").optional(),
 				requestMappingConditionField(".consumes").description("Details of the consumes condition"),
 				requestMappingConditionField(".consumes.[].mediaType").description("Consumed media type."),
@@ -122,7 +121,7 @@ class MappingsEndpointServletDocumentationTests extends AbstractEndpointDocument
 				requestMappingConditionField(".produces").description("Details of the produces condition."),
 				requestMappingConditionField(".produces.[].mediaType").description("Produced media type."),
 				requestMappingConditionField(".produces.[].negated").description("Whether the media type is negated."));
-		List<FieldDescriptor> handlerMethod = Arrays.asList(
+		List<FieldDescriptor> handlerMethod = List.of(
 				fieldWithPath("*.[].details.handlerMethod").optional()
 					.type(JsonFieldType.OBJECT)
 					.description("Details of the method, if any, that will handle requests to this mapping."),
